--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<!-- <link rel="stylesheet" href="style.css"> -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<title>Login Form</title>
-</head>
-<body>
-	<div class="container" id="container">
-		<div class="form-container log-in-container">
-			<form action="#">
-				<h1>Login</h1>
-				<span>or use your account</span>
-				<input type="email" placeholder="Email" />
-				<input type="password" placeholder="Password" />
-                <div class="remember">
-                    <label>
-                        <input type="checkbox" checked="checked" name="remember"> Remember me
-                    </label>
-                    &nbsp;
-                    &nbsp;
-                    <a href="#">Forgot your password?</a>
-                </div>
-                
-				<button routerLink="/dashboard">Log In</button>
+  <head>
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <title>Login Form</title>
+  </head>
+  <body>
+    <div class="container" id="container">
+      <div class="form-container log-in-container">
+        <form action="" method="POST" class=".form--login">
+          <h1>Login</h1>
+          <span>or use your account</span>
+          <input type="email" placeholder="Email" />
+          <input type="password" placeholder="Password" />
+          <div class="remember">
+            <label>
+              <input type="checkbox" checked="checked" name="remember" />
+              Remember me
+            </label>
+            &nbsp; &nbsp;
+            <a href="#">Forgot your password?</a>
+          </div>
 
-                <div class="social-container">
-					<a href="#" class="social"><i class="fa fa-facebook fa-2x"></i></a>
-					<a href="#" class="social"><i class="fab fa fa-twitter fa-2x"></i></a>
-				</div>
-			</form>
-		</div>
-		<!-- <div class="overlay-container">
+          <button routerLink="/dashboard">Log In</button>
+
+          <div class="social-container">
+            <a href="#" class="social"><i class="fa fa-facebook fa-2x"></i></a>
+            <a href="#" class="social"
+              ><i class="fab fa fa-twitter fa-2x"></i
+            ></a>
+          </div>
+        </form>
+      </div>
+      <!-- <div class="overlay-container">
 			<div class="overlay">
 				<div class="overlay-panel overlay-right">
 					<h1>HTML CSS Login Form</h1>
@@ -38,6 +43,6 @@
 				</div>
 			</div>
 		</div> -->
-	</div>
-</body>
+    </div>
+  </body>
 </html>
