--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,47 +1,72 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>SignUp Form</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container" id="container">
-        <div class="form-container log-in-container">
-            <form action="#">
-                <h1>Sign Up</h1>
-                <p>Please fill in this form to create an account.</p>
+      <div class="form-container log-in-container">
+        <form action="#">
+          <h1>Sign Up</h1>
+          <p>Please fill in this form to create an account.</p>
 
-                <label for="email"><b>Email</b></label>
-                <input type="text" placeholder="Enter Email" name="email" required>
+          <label for="email"><b>Email</b></label>
+          <input type="text" placeholder="Enter Email" name="email" required />
 
-                <label for="psw"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" name="psw" required>
+          <label for="psw"><b>Password</b></label>
+          <input
+            type="password"
+            placeholder="Enter Password"
+            name="psw"
+            required
+          />
 
-                <label for="psw-repeat"><b>Repeat Password</b></label>
-                <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+          <label for="psw-repeat"><b>Repeat Password</b></label>
+          <input
+            type="password"
+            placeholder="Repeat Password"
+            name="psw-repeat"
+            required
+          />
 
-                <label>
-                    <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-                </label>
+          <label>
+            <input
+              type="checkbox"
+              checked="checked"
+              name="remember"
+              style="margin-bottom: 15px"
+            />
+            Remember me
+          </label>
 
-                <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+          <p>
+            By creating an account you agree to our
+            <a href="#" style="color: dodgerblue">Terms & Privacy</a>.
+          </p>
 
-                <div class="clearfix">
-                    <button type="button" class="cancelbtn">Cancel</button>
-                    &nbsp;
-                    <button type="button" class="signupbtn" routerLink="/dashboard">Sign Up</button>
-                </div>
+          <div class="clearfix">
+            <button type="button" class="cancelbtn">Cancel</button>
+            &nbsp;
+            <button type="button" class="signupbtn" href="/signup">
+              Sign Up
+            </button>
+          </div>
 
-                <div class="social-container">
-                    <a href="#" class="social"><i class="fa fa-facebook fa-2x"></i></a>
-                    <a href="#" class="social"><i class="fab fa fa-twitter fa-2x"></i></a>
-                </div>
-            </form>
-        </div>
-        <!-- <div class="overlay-container">
+          <div class="social-container">
+            <a href="#" class="social"><i class="fa fa-facebook fa-2x"></i></a>
+            <a href="#" class="social"
+              ><i class="fab fa fa-twitter fa-2x"></i
+            ></a>
+          </div>
+        </form>
+      </div>
+      <!-- <div class="overlay-container">
 			<div class="overlay">
 				<div class="overlay-panel overlay-right">
 					<h1>HTML CSS Login Form</h1>
@@ -50,6 +75,5 @@
 			</div>
 		</div> -->
     </div>
-</body>
-
+  </body>
 </html>
