--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -53,9 +53,7 @@
           <div class="clearfix">
             <button type="button" class="cancelbtn">Cancel</button>
             &nbsp;
-            <button type="button" class="signupbtn" href="/signup">
-              Sign Up
-            </button>
+            <button type="submit" class="signupbtn">Sign Up</button>
           </div>
 
           <div class="social-container">
