--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,10 @@
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+    <script src="../../utils/login.js"></script>
+    <script src="../../utils/index.js"></script>
+    <script src="../../utils/bundle.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-inverse">
@@ -32,7 +36,7 @@
           </li>
         </ul>
 
-        <ul class="nav navbar-nav navbar-right" #logout>
+        <ul class="nav navbar-nav navbar-right navbar-logout" #logout>
           <li>
             <a href="/"
               ><span class="glyphicon glyphicon-log-out"></span> LogOut</a
