ref: instrument model and handler function

--- a/src/app/add-edit-instrument/add-edit-instrument.component.html
+++ b/src/app/add-edit-instrument/add-edit-instrument.component.html
@@ -71,9 +71,10 @@
             <td>
               <select style="width: 272px">
                 <option value="none" selected disabled hidden>Select</option>
-                <option>1</option>
-                <option>1</option>
-                <option>1</option>
+                <option>Keithly</option>
+                <option>Agilent</option>
+                <option>Keysight</option>
+                <option>National Instruments</option>
               </select>
             </td>
           </tr>
@@ -82,9 +83,9 @@
             <td>
               <select style="width: 272px">
                 <option value="none" selected disabled hidden>Select</option>
-                <option>1</option>
-                <option>1</option>
-                <option>1</option>
+                <option>1000G</option>
+                <option>M1234</option>
+                <option>X1234</option>
               </select>
             </td>
           </tr>
@@ -93,9 +94,8 @@
             <td>
               <select style="width: 272px">
                 <option value="none" selected disabled hidden>Select</option>
-                <option>1</option>
-                <option>1</option>
-                <option>1</option>
+                <option>Line 1</option>
+                <option>Line 2</option>
               </select>
             </td>
           </tr>
@@ -104,9 +104,9 @@
             <td>
               <select style="width: 272px">
                 <option value="none" selected disabled hidden>Select</option>
-                <option>1</option>
-                <option>1</option>
-                <option>1</option>
+                <option>Ajay</option>
+                <option>Peter</option>
+                <option>Gowtham</option>
               </select>
             </td>
           </tr>
@@ -115,9 +115,9 @@
             <td>
               <select style="width: 272px">
                 <option value="none" selected disabled hidden>Select</option>
-                <option>1</option>
-                <option>1</option>
-                <option>1</option>
+                <option>Ajay</option>
+                <option>Peter</option>
+                <option>Gowtham</option>
               </select>
             </td>
           </tr>
@@ -126,9 +126,10 @@
             <td>
               <select style="width: 272px">
                 <option value="none" selected disabled hidden>Select</option>
-                <option>1</option>
-                <option>1</option>
-                <option>1</option>
+                <option>Internal Team</option>
+                <option>External Company1</option>
+                <option>External Company2</option>
+                <option>External Company3</option>
               </select>
             </td>
           </tr>
@@ -137,9 +138,9 @@
             <td>
               <select style="width: 272px">
                 <option value="none" selected disabled hidden>Select</option>
-                <option>1</option>
-                <option>1</option>
-                <option>1</option>
+                <option>2 hrs</option>
+                <option>2 wks</option>
+                <option>1 mnth</option>
               </select>
             </td>
           </tr>
@@ -172,9 +173,12 @@
             <td>
               <select style="width: 272px">
                 <option value="none" selected disabled hidden>Select</option>
-                <option>1</option>
-                <option>1</option>
-                <option>1</option>
+                <option>3-month to due date</option>
+                <option>2-month to due date</option>
+                <option>1-month to due date</option>
+                <option>3-week to due date</option>
+                <option>2-week to due date</option>
+                <option>1-week to due date</option>
               </select>
             </td>
           </tr>
@@ -183,9 +187,12 @@
             <td>
               <select style="width: 272px">
                 <option value="none" selected disabled hidden>Select</option>
-                <option>1</option>
-                <option>1</option>
-                <option>1</option>
+                <option>3-month to due date</option>
+                <option>2-month to due date</option>
+                <option>1-month to due date</option>
+                <option>3-week to due date</option>
+                <option>2-week to due date</option>
+                <option>1-week to due date</option>
               </select>
             </td>
           </tr>
