--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -155,7 +155,9 @@
         &nbsp;
 
         <div class="calstudio">
-          <a href="" class="a-calstudio">Manage Users</a>
+          <a routerLink="/add-edit-instrument" class="a-calstudio"
+            >Manage Users</a
+          >
           <a routerLink="/all-instrument" class="a-calstudio"
             >Manage Instruments</a
           >
