--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,11 +11,24 @@
   <body>
     <div class="container" id="container">
       <div class="form-container log-in-container">
-        <form action="" method="post" id="form-body">
+        <!-- <form action="" method="post" id="form-login"> -->
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
           <h1>Login</h1>
           <span>or use your account</span>
-          <input type="email" placeholder="Email" id="email" />
-          <input type="password" placeholder="Password" id="password" />
+          <input
+            type="email"
+            placeholder="Email"
+            id="email"
+            class="form-control"
+            formControlName="email"
+          />
+          <input
+            type="password"
+            placeholder="Password"
+            id="password"
+            class="form-control"
+            formControlName="pwd"
+          />
           <div class="remember">
             <label>
               <input type="checkbox" checked="checked" name="remember" />
@@ -25,7 +38,7 @@
             <a href="#">Forgot your password?</a>
           </div>
 
-          <button type="submit" routerLink="/dashboard">Log In</button>
+          <button type="submit" (click)="onLogin()">Log In</button>
 
           <div class="social-container">
             <a href="#" class="social"><i class="fa fa-facebook fa-2x"></i></a>
