--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container" id="container">
       <div class="form-container log-in-container">
-        <form action="#">
+        <form action="#" method="post" id="form-submit">
           <h1>Sign Up</h1>
           <p>Please fill in this form to create an account.</p>
 
@@ -53,7 +53,9 @@
           <div class="clearfix">
             <button type="button" class="cancelbtn">Cancel</button>
             &nbsp;
-            <button type="submit" class="signupbtn">Sign Up</button>
+            <button type="submit" class="signupbtn" (click)="onSignUp()">
+              Sign Up
+            </button>
           </div>
 
           <div class="social-container">
@@ -64,14 +66,8 @@
           </div>
         </form>
       </div>
-      <!-- <div class="overlay-container">
-			<div class="overlay">
-				<div class="overlay-panel overlay-right">
-					<h1>HTML CSS Login Form</h1>
-					<p>This login form is created using pure HTML and CSS. For social icons, FontAwesome is used.</p>
-				</div>
-			</div>
-		</div> -->
     </div>
+    <script src="../../../utils/login.js"></script>
+    <script src="../../../utils/index.js"></script>
   </body>
 </html>
