--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,7 +27,7 @@
             placeholder="Password"
             id="password"
             class="form-control"
-            formControlName="pwd"
+            formControlName="password"
           />
           <div class="remember">
             <label>
@@ -38,7 +38,7 @@
             <a href="#">Forgot your password?</a>
           </div>
 
-          <button type="submit" (click)="onLogin()">Log In</button>
+          <button type="submit">Log In</button>
 
           <div class="social-container">
             <a href="#" class="social"><i class="fa fa-facebook fa-2x"></i></a>
