--- a/src/app/manage-instrument-group/manage-instrument-group.component.css
+++ b/src/app/manage-instrument-group/manage-instrument-group.component.css
@@ -35,7 +35,6 @@ table {
 th,
 td {
     text-align: center;
-    ;
     padding: 16px;
 }
 
@@ -43,6 +42,6 @@ tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-.glyphicon-edit {
-    margin-left: 40px;
+.glyphicon-calendar {
+    margin-left: 15px;
 }
